--- a/VkAuth/VkAuth.csproj
+++ b/VkAuth/VkAuth.csproj
@@ -38,6 +38,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,6 +50,8 @@
     <Compile Include="Enums\DisplayPageType.cs" />
     <Compile Include="Enums\Scope.cs" />
     <Compile Include="Extensions.cs" />
+    <Compile Include="STAThread.cs" />
+    <Compile Include="IFactory.cs" />
     <Compile Include="IVkAuth.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VkAuthFactory.cs" />
