--- a/VkAuth.Awesomium/VkAuth.Awesomium.csproj
+++ b/VkAuth.Awesomium/VkAuth.Awesomium.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{3588F6BC-F9A9-49A6-9018-EA05D2C19E97}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>WinExe</OutputType>
     <RootNamespace>VkAuth.Awesomium</RootNamespace>
     <AssemblyName>VkAuth.Awesomium</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
